--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -17,7 +17,7 @@ body {
 /* Form Layout */
 .form-wrapper {
   background: #fafafa;
-  margin: 3em auto;
+  margin: 140px auto 3em;
   padding: 0 1em;
   max-width: 370px;
 }
@@ -73,6 +73,27 @@ form {
   width: 100%;
 }
 
-.guideline {
+.form-guideline {
   font-size: smaller;
+}
+
+.wrapper{
+  min-height: 1vh;
+  position: relative;
+  padding-bottom: 10px;
+  box-sizing: border-box;
+}
+
+.footer{
+  width: 100%;
+  background-color: #89c7de;
+  color: #fff;
+  text-align: center;
+  padding: 5px 0;
+  position: absolute;
+  bottom: 0;
+}
+
+.guideline {
+  font-size: 12px;
 }
