--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,11 +4,15 @@
   </h1>
   <div class="global-nav">
     <ul class="nav-bar">
-      <li><%#= link_to "投稿する", new_article_path, class:"post" %></li>
       <li><a href="#">検索する</a></li>
-      <%# ユーザーのログイン状態で表示を分ける ユーザー名 ログアウト %>
-      <li><%= link_to "新規登録", new_user_registration_path %></li>
-      <li><%= link_to "ログイン", new_user_session_path %></li>
+      <li><%= link_to "投稿する", "#", class:"post" %></li>
+      <% if user_signed_in? %>
+        <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
+        <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
+      <% else %>
+        <li><%= link_to "新規登録", new_user_registration_path %></li>
+        <li><%= link_to "ログイン", new_user_session_path %></li>
+      <% end %>
     </ul>
   </div>
 </header>
