新規登録・ログインページの修正

--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,7 +4,7 @@
   </h1>
   <div class="global-nav">
     <ul class="nav-bar">
-      <li><a href="#">検索する</a></li>
+      <li><%= link_to "検索する", "#" %></li>
       <li><%= link_to "投稿する", "#", class:"post" %></li>
       <% if user_signed_in? %>
         <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
