--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -19,12 +19,33 @@ body {
   background: #fafafa;
   margin: 140px auto 3em;
   padding: 0 1em;
-  max-width: 370px;
+  max-width: 450px;
 }
 
 h1 {
   text-align: center;
   padding: 1em 0;
+}
+
+.form-text {
+  font-size: 14px;
+  font-weight: bold;
+}
+
+.info-text {
+  color: #888;
+  font-size: 10px;
+  margin-top: 3px;
+}
+
+.indispensable {
+  background: #ea352d;
+  margin-left: 8px;
+  padding: 3px;
+  border-radius: 2px;
+  color: #fff;
+  font-size: 10px;
+  font-weight: bold;
 }
 
 form {
@@ -38,8 +59,7 @@ form {
 
 .form-item input {
   background: #fafafa;
-  border: none;
-  border-bottom: 2px solid #e9e9e9;
+  border: 1px solid #e9e9e9;
   color: #666;
   font-family: 'Open Sans', sans-serif;
   font-size: 1em;
