--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -2,28 +2,37 @@
 <%= render 'shared/header' %>
 
 <div class="form-wrapper">
-  <h1>Sign up</h1>
+  <h1>新規登録フォーム</h1>
   <%= form_with model: @user, url: user_registration_path, id: 'new_user', class: 'new_user', local: true do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
-
     <div class="form-item">
-      <%= f.text_field :nickname, autofocus: true, maxlength: "6", placeholder: "nickname (6 characters maximum)" %>
+      <label class="form-text">ニックネーム</label>
+      <span class="indispensable">必須</span>
+      <%= f.text_field :nickname, autofocus: true, maxlength: "6" %>
+      <p class='info-text'>※6文字以内のひらがな･カタカナで入力してください（「ヴ」「ゔ」は使用不可）</p>
     </div>
 
     <div class="form-item">
-      <%= f.email_field :email, placeholder: "Email" %>
+      <label class="form-text">メールアドレス</label>
+      <span class="indispensable">必須</span>
+      <%= f.email_field :email %>
     </div>
 
     <div class="form-item">
-      <%= f.password_field :password, autocomplete: "off", placeholder: "Password (6 characters minimum)" %>
+      <label class="form-text">パスワード</label>
+      <span class="indispensable">必須</span>
+      <%= f.password_field :password, autocomplete: "off" %>
+      <p class='info-text'>※6文字以上の半角英数字で入力してください（記号も入力可）</p>
     </div>
 
     <div class="form-item">
-      <%= f.password_field :password_confirmation, autocomplete: "off", placeholder: "Password_confirmation" %>
+      <label class="form-text">パスワード（確認）</label>
+      <span class="indispensable">必須</span>
+      <%= f.password_field :password_confirmation, autocomplete: "off" %>
     </div>
 
     <div class="button-panel">
-      <%= f.submit "Sign up", class: "button" %>
+      <%= f.submit "登録する", class: "button" %>
     </div>
     <div class="form-footer">
       <p class="form-guideline">
