--- a/app/assets/stylesheets/articles/index.css
+++ b/app/assets/stylesheets/articles/index.css
@@ -11,7 +11,7 @@
   display: grid;
   gap: 10px;
   grid-template-columns: 1fr 1fr;
-  overflow:scroll;
+  overflow: scroll;
 
 }
 
@@ -19,7 +19,7 @@
   display: inline-block;
   padding: 20px 0;
   width: 83px;
-  margin: -20px 0;
+  margin: -10px 0;
   }
 
 .ribbon20 {
@@ -47,12 +47,12 @@
   margin: 0;
 }
 
-.date{
-  margin: 0 5px 0 0;
+.date .tags{
+  margin: 5px 0;
 }
 
 .tags{
-  margin: 0;
+  margin-left: 30px;
 }
 
 .text{
