フォームのCSS修正

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -181,7 +181,7 @@ align-items: center;
   font-size: 15px;
   line-height: 1.4;
   min-width: 595px;
-  height: 70%;
+  height: 540px;
   white-space: pre-wrap;
   overflow: scroll;
   resize: none;
