--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -9,7 +9,7 @@
       <label class="form-text">ニックネーム</label>
       <span class="indispensable">必須</span>
       <%= f.text_field :nickname, autofocus: true, maxlength: "6" %>
-      <p class='info-text'>※6文字以内のひらがな･カタカナで入力してください（「ヴ」「ゔ」は使用不可）</p>
+      <p class='info-text'>※6文字以内のひらがな･カタカナで入力してください</p>
     </div>
 
     <div class="form-item">
@@ -22,7 +22,7 @@
       <label class="form-text">パスワード</label>
       <span class="indispensable">必須</span>
       <%= f.password_field :password, autocomplete: "off" %>
-      <p class='info-text'>※6文字以上の半角英数字で入力してください（記号も入力可）</p>
+      <p class='info-text'>※半角英数字6字以上で、数字とアルファベットをそれぞれ1字以上含めてください</p>
     </div>
 
     <div class="form-item">
