--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -10,7 +10,7 @@
         </div>
       <%# end %>
         <div class="article-title">
-          <%= link_to article.title, articles_path(article.id) %>
+          <%= link_to article.title, article_path(article.id) %>
         </div>
         <div class="details">
           <p class="date"><%= article.created_at.to_s(:datetime_jp) %></p>
@@ -20,7 +20,7 @@
         <div class="text">
           <%= article.text %>
         </div>
-        <%= link_to "Read More", articles_path(article.id) %>
+        <%= link_to "Read More", article_path(article.id) %>
       </div>
       <div class="deck-tables">
         <div class="grid-fit">
