--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -96,7 +96,7 @@
     <% if user_signed_in? && current_user == @article.user %>
       <div class="article-footer">
         <%= link_to "編集する", "#", id: "edit", class: "edit-btn btn-radius" %>
-        <%= link_to "削除する", "#", id: "delete", class: "delete-btn btn-radius" %>
+        <%= link_to "削除する", article_path, method: :delete, id: "delete", class: "delete-btn btn-radius" %>
         <p class="form-guideline">
         ※ 「削除」ボタンを押すと記事が即時削除されます。復元できませんので十分ご注意ください。
         </p>
