--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,8 +4,11 @@
   </h1>
   <div class="global-nav">
     <ul class="nav-bar">
-      <li><%= link_to "検索する", "#" %></li>
-      <li><%= link_to "投稿する", new_article_path, class:"post" %></li>
+      <%= form_with(url: search_articles_path, local: true, method: :get, class: "search-form") do |form| %>
+        <%= form.text_field :keyword, placeholder: "キーワードを入力", class: "search-input" %>
+        <%= form.submit "検索", class: "search-btn" %>
+      <% end %>
+        <li><%= link_to "投稿する", new_article_path, class:"post" %></li>
       <% if user_signed_in? %>
         <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
         <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
