--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -7,7 +7,7 @@
       <li><%= link_to "検索する", search_articles_path, class:"search" %></li>
       <li><%= link_to "投稿する", new_article_path, class:"post" %></li>
       <% if user_signed_in? %>
-        <li><%= link_to current_user.nickname, "#", class: "user-nickname" %></li>
+        <li><%= link_to current_user.nickname, my_page_articles_path(user_id: current_user.id), class: "user-nickname" %></li>
         <li><%= link_to 'ログアウト', destroy_user_session_path, method: :delete, class: "logout" %></li>
       <% else %>
         <li><%= link_to "新規登録", new_user_registration_path %></li>
