いいね！ボタンの大枠作成

--- a/app/assets/stylesheets/articles/index.css
+++ b/app/assets/stylesheets/articles/index.css
@@ -69,6 +69,10 @@
   overflow: scroll;
 }
 
+.reaction-area {
+  text-align: right;
+}
+
 .DeckTablesGrid{
   display: flex;
   justify-content: center;
