--- a/app/views/shared/_article_content.html.erb
+++ b/app/views/shared/_article_content.html.erb
@@ -16,6 +16,10 @@
         <div class="text"><%= article.text %>
         </div>
         <%= link_to "Read More", article_path(article.id) %>
+        <div class="reaction-area">
+        <a href="", class="nice-btn">このデッキにいいね！</a>
+        <a href="", class="nice-count">いいね！#件</a>
+        </div>
       </div>
       <div class="deck-tables">
         <div class="grid-fit">
