--- a/app/views/shared/_article_content.html.erb
+++ b/app/views/shared/_article_content.html.erb
@@ -16,9 +16,9 @@
         <div class="text"><%= article.text %>
         </div>
         <%= link_to "Read More", article_path(article.id) %>
-        <div class="reaction-area">
-        <a href="", class="nice-btn">このデッキにいいね！</a>
-        <a href="", class="nice-count">いいね！#件</a>
+
+        <div class="reaction-area", id="nice_btn_<%= article.id %>">
+          <%= render partial: 'shared/nice_form', locals: { article: article} %>
         </div>
       </div>
       <div class="deck-tables">
