--- a/app/views/articles/search_result.html.erb
+++ b/app/views/articles/search_result.html.erb
@@ -5,12 +5,12 @@
 
   <% if @articles.empty? %>
     <h3 class="search-result">※お探しの記事は見つかりませんでした。条件を変えて検索してください。</h3>
-  <% else %>
+  <% elsif params[:genre_id].present? %>
     <h3 class="search-result"><%= "「#{Genre.find(params[:genre_id]).name}」" %>の記事一覧</h3>
-    <% @articles.each do |article| %>
-      <%= render partial: "shared/article_content", locals: { article: article } %>
-    <% end %>
-  <% end%>
+  <% end %>
+  <% @articles.each do |article| %>
+    <%= render partial: "shared/article_content", locals: { article: article } %>
+  <% end %>
 </div>
 
 <%= render 'shared/footer' %>
